Fix confirmation icons alignment

--- a/client/components/Day/day.less
+++ b/client/components/Day/day.less
@@ -116,14 +116,15 @@ section.day {
   }
 
   div.confirmationOverlay {
-    display: block;
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     border-radius: 5px 5px;
     position: absolute;
     z-index: 100;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
     button {
       border: 1px solid @beige;
@@ -134,8 +135,6 @@ section.day {
       border-radius: 26px;
       margin-right: 20px;
       margin-left: 20px;
-      position: relative;
-      top: ~"calc(50% - 26px)";
 
       &:focus {
         outline: none;
